[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "seamless_pdf"
version = "0.1.0"
authors = [
  { name="Anthony Hua", email="tommyrobotics1@gmail.com" },
]
description = "A tool to convert HTML documents to continuous PDFs"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "playwright",
]

[project.scripts]
seamless-pdf = "seamless_pdf.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
