[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seamless-pdf"
version = "0.1.0"
authors = [
  { name="Anthony Hua", email="tommyrobotics1@gmail.com" },
]
description = "Convert HTML documents into continuous, single-page PDFs."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = [
    "playwright >=1.40.0",
]

[project.scripts]
seamless-pdf = "seamless_pdf.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
